# ordsearch

./: Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: bench.yaml  check.yml  safety.yml  scheduled.yml  test.yml
benches/: common.rs  search_btree.rs  search_comparison.rs  search_ord.rs  search_vec.rs
plots/: gather.py  generate-plot.sh  plot.gnuplot
src/: lib.rs
