[package]
name = "ordsearch"
version = "0.2.4"

description = "A data structure for efficient lower-bound lookups"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/ordsearch"
homepage = "https://github.com/jonhoo/ordsearch"
repository = "https://github.com/jonhoo/ordsearch.git"

keywords = ["data-structures", "search", "performance", "Eytzinger"]
categories = ["data-structures", "memory-management"]

license = "MIT/Apache-2.0"

[features]
default = []
nightly = []

[badges]
travis-ci = { repository = "jonhoo/ordsearch" }
maintenance = { status = "as-is" }

[profile.release]
lto = "fat"

[dev-dependencies]
criterion = "0.4"
num-traits = "0.2.15"

[[bench]]
name = "search_comparison"
harness = false
