[package]
name = "ordsearch"
version = "0.2.5"

description = "A data structure for efficient lower-bound lookups"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/ordsearch"
homepage = "https://github.com/jonhoo/ordsearch"
repository = "https://github.com/jonhoo/ordsearch.git"

keywords = ["data-structures", "search", "performance", "Eytzinger"]
categories = ["data-structures", "memory-management"]

license = "MIT/Apache-2.0"

[features]
default = []
nightly = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-traits = "0.2.15"

[target.'cfg(any())'.dependencies]
serde = { version = "1.0.100", optional = true }
regex = { version = "1.6.0", optional = true }

[[bench]]
name = "search_comparison"
harness = false
